apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      securityContext:
        fsGroup: 33
        runAsUser: 33
        runAsGroup: 33

      # Wait for database to be ready
      # initContainers:
      #   - name: wait-for-db
      #     image: postgres:17
      #     command:
      #       - sh
      #       - -c
      #       - |
      #         until pg_isready -h linkding-postgres-rw -p 5432 -U linkding; do
      #           echo "Waiting for database..."
      #           sleep 2
      #         done
      #         echo "Database is ready!"
      #     env:
      #       - name: PGPASSWORD
      #         valueFrom:
      #           secretKeyRef:
      #             name: linkding-db-credentials
      #             key: password

      containers:
        - name: linkding
          image: sissbruecker/linkding:1.46.2
          ports:
            - containerPort: 9090

          resources:
            requests:
              cpu: "10m"
              memory: "192Mi"
            limits:
              cpu: "200m"
              memory: "384Mi"
          securityContext:
            allowPrivilegeEscalation: false

          volumeMounts:
            - name: linkding-data
              mountPath: /etc/linkding/data

      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data-pvc
